# atmosfeed

./: .gitignore  Dockerfile  Dockerfile.manager  Dockerfile.worker  Hydrunfile  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: docker.yaml  hydrun.yaml  scale.yaml
classifiers/alwaystrue/: go.mod  main.go  scalefile
classifiers/everything/: go.mod  main.go  scalefile
classifiers/german/: go.mod  go.sum  main.go  scalefile
classifiers/questions/: Cargo.toml  go.mod  lib.rs  main.go  scalefile
classifiers/questions.bak/: Cargo.toml  lib.rs  scalefile
classifiers/trending/: go.mod  main.go  scalefile
cmd/atmosfeed/: main.go
cmd/atmosfeed-admin/: main.go
cmd/atmosfeed-classify/: main.go
cmd/atmosfeed-client/: main.go
cmd/atmosfeed-client/cmd/: apply.go  delete.go  delete_userdata.go  dev.go  export.go  export_userdata.go  list.go  publish.go  root.go  (+2 more)
cmd/atmosfeed-dev/: main.go
cmd/atmosfeed-manager/: main.go
cmd/atmosfeed-publisher/: main.go
cmd/atmosfeed-server/: main.go
cmd/atmosfeed-upsert-feed/: main.go
cmd/atmosfeed-worker/: main.go
docs/: DEMO.md  demo.md
frontend/: bun.lockb  package.json
frontend/api/: models.ts  rest.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: api.ts
hack/: publish-feed.sh  publish-feed.ts
pkg/migrations/: 20230829153600_init.sql  20230901115200_add_feeds.sql  20230901143700_add_feed_triggers.sql
pkg/models/: db.go  feeds.sql.go  models.go  posts.sql.go
pkg/persisters/: feeds.go  manager.go  posts.go  root.go  worker.go
pkg/queries/: feeds.sql  posts.sql
(+18 files in other folders)
